--- a/html/about.html
+++ b/html/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="/css/about.css">
 
 </head>
+
 <body>
     <header class="navbar">
         <nav class="navbar">
@@ -47,7 +49,7 @@
             </div>
         </form>
     </header>
-    
+
     <div class="main">
         <div class="img">
             <img src="/img/banner/puppy-5124947_1920.jpg" alt="">
@@ -56,11 +58,21 @@
         <div class="main-text">
             <div class="about">
                 <h1>About us</h1>
-                <div class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio est dolor soluta et numquam sunt quo corrupti vitae odit vel, at necessitatibus veniam ratione asperiores quam, enim quis neque eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero cupiditate fugit aspernatur corporis soluta ipsam alias ipsum, pariatur excepturi cum doloremque voluptatem iure, distinctio voluptatum, a eum incidunt debitis esse.</div>
+                <div class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio est dolor
+                    soluta et numquam sunt quo corrupti vitae odit vel, at necessitatibus veniam ratione asperiores
+                    quam, enim quis neque eum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                    cupiditate fugit aspernatur corporis soluta ipsam alias ipsum, pariatur excepturi cum doloremque
+                    voluptatem iure, distinctio voluptatum, a eum incidunt debitis esse.</div>
             </div>
             <div class="our-story">
                 <h1>Our Story</h1>
-                <div class="story-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque rerum excepturi ipsum nam doloribus eius debitis unde aliquam error itaque? Natus vitae facilis reiciendis doloribus quia corporis itaque nam fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus, placeat, doloremque ipsum nisi neque fuga, atque eos libero natus vero? Debitis quos exercitationem ipsum repellat hic corrupti. Aliquam, ipsum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus impedit ipsum sint reprehenderit reiciendis, explicabo, quidem iure rem quod, aliquid enim cumque cupiditate ad asperiores a! Tempora eligendi repudiandae harum?</div>
+                <div class="story-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque rerum excepturi
+                    ipsum nam doloribus eius debitis unde aliquam error itaque? Natus vitae facilis reiciendis doloribus
+                    quia corporis itaque nam fugiat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum
+                    voluptatibus, placeat, doloremque ipsum nisi neque fuga, atque eos libero natus vero? Debitis quos
+                    exercitationem ipsum repellat hic corrupti. Aliquam, ipsum. Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Voluptatibus impedit ipsum sint reprehenderit reiciendis, explicabo, quidem iure
+                    rem quod, aliquid enim cumque cupiditate ad asperiores a! Tempora eligendi repudiandae harum?</div>
             </div>
         </div>
     </div>
@@ -71,4 +83,5 @@
 
     <script src="/js/script.js"></script>
 </body>
+
 </html>
