--- a/html/homepage.html
+++ b/html/homepage.html
@@ -117,7 +117,8 @@
                     <a href="" class="action-btn">See details</a>
                 </li>
                 <li class="img-5">
-                    <img src="/img/dogfood/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg" class="mini-img" alt="">
+                    <img src="/img/dogfood/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
+                        class="mini-img" alt="">
                     <h3 class="box-description">Dog Nip! Dog Chews</h3>
                     <a href="" class="action-btn">See details</a>
                 </li>
