--- a/html/shop.html
+++ b/html/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="\css\shop.css">
 
 </head>
+
 <body>
     <header class="navbar">
-        <nav class="navbar"> 
+        <nav class="navbar">
             <div class="logo">
-                <a href="homepage.html"><i class="fas fa-paw"></i> Zhulie</a>    
+                <a href="homepage.html"><i class="fas fa-paw"></i> Zhulie</a>
             </div>
             <div class="menu">
                 <a href="homepage.html">Home</a>
@@ -55,7 +57,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/food/Blue Buffalo.jpg" class="product-img">
@@ -69,7 +71,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/food/RoyalCanin.jpg" class="product-img">
@@ -83,7 +85,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="\img\shop\food\Hill's Science Diet.jpg" class="product-img">
@@ -97,7 +99,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/food/Pedigree.jpg" class="product-img">
@@ -111,10 +113,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg" class="product-img">
+                    <img src="/img/shop/food/Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks (10 Pack) for Dogs.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Dog Nip! 6-Inch Braided Pork Pizzle Pig Bully Sticks</h3>
@@ -125,10 +128,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Gobble! 6-Inch Turkey Tendon Strips for Dogs, 6 oz. (170g).jpg" class="product-img">
+                    <img src="/img/shop/food/Gobble! 6-Inch Turkey Tendon Strips for Dogs, 6 oz. (170g).jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Gobble! 6-Inch Turkey Tendon Strips for Dogs</h3>
@@ -139,10 +143,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Milk-Bone Mini Comfort Chews, Dog Treats with Unique Chewy Texture and Real Beef, 6 Mini Chews.jpg" class="product-img">
+                    <img src="/img/shop/food/Milk-Bone Mini Comfort Chews, Dog Treats with Unique Chewy Texture and Real Beef, 6 Mini Chews.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Milk-Bone Mini Comfort Chews</h3>
@@ -153,10 +158,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/N-Bone Puppy Teething Rings Peanut Butter Flavor Dog Treat, 6 Count Bag, 7.2-oz.jpg" class="product-img">
+                    <img src="/img/shop/food/N-Bone Puppy Teething Rings Peanut Butter Flavor Dog Treat, 6 Count Bag, 7.2-oz.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>N-Bone Puppy Teething Rings</h3>
@@ -167,7 +173,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/food/N-Bone Puppy Teething Treats,Chicken, 3.74 oz.jpg" class="product-img">
@@ -181,10 +187,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Purina Pro Plan Veterinary Supplements FortiFlora Dog Probiotic Supplement, Canine Nutritional Supplement - (72) 30 ct. Boxes.jpg" class="product-img">
+                    <img src="/img/shop/food/Purina Pro Plan Veterinary Supplements FortiFlora Dog Probiotic Supplement, Canine Nutritional Supplement - (72) 30 ct. Boxes.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Purina Pro Plan </h3>
@@ -195,10 +202,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/Rachael Ray Nutrish Premium Natural Dry Dog Food, Real Chicken & Veggies Recipe, 40 Pound Bag.jpg" class="product-img">
+                    <img src="/img/shop/food/Rachael Ray Nutrish Premium Natural Dry Dog Food, Real Chicken & Veggies Recipe, 40 Pound Bag.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Rachael Ray Nutrish</h3>
@@ -209,10 +217,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/food/N-Bone Quado Interactive Chew, Ginormous Peanut Flavor (1 Pack), Large.jpg" class="product-img">
+                    <img src="/img/shop/food/N-Bone Quado Interactive Chew, Ginormous Peanut Flavor (1 Pack), Large.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>N-Bone Quado Interactive Chew</h3>
@@ -223,7 +232,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/Honest Paws Probiotics for Dogs .jpg" class="product-img">
@@ -237,10 +246,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg" class="product-img">
+                    <img src="/img/shop/shampoo/Nootie - Pet Shampoo for Sensitive Skin - Revitalizes Dry Skin & Coat.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Nootie - Pet Shampoo for Sensitive Skin</h3>
@@ -251,7 +261,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/shampoo/Bio-Groom So-Gentle Hypoallergenic Dog Shampoo.jpg" class="product-img">
@@ -265,10 +275,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/shampoo/Burt's Bees for Pets Natural Skin Soothing Shampoo with Honey.jpg" class="product-img">
+                    <img src="/img/shop/shampoo/Burt's Bees for Pets Natural Skin Soothing Shampoo with Honey.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Burt's Bees for Pets Natural Skin Soothing Shampoo with Honey</h3>
@@ -279,7 +290,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/shampoo/Hartz18OZ Puppy Shampoo.jpg" class="product-img">
@@ -293,7 +304,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/Vet's Best Dog Toothbrush & Enzymatic Toothpaste Kit.jpg" class="product-img">
@@ -307,7 +318,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/Pet MD - Dog Ear Cleaner Wipes.jpg" class="product-img">
@@ -321,10 +332,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Petkin Fingertip Eye Wipes for Dogs and Cats, 50 Finger Wipes.jpg" class="product-img">
+                    <img src="/img/shop/Petkin Fingertip Eye Wipes for Dogs and Cats, 50 Finger Wipes.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Petkin Fingertip Eye Wipes</h3>
@@ -335,10 +347,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/Best Pet Supplies (22.5 x 22) Disposable Puppy Pads for Whelping Puppies and Training Dogs.jpg" class="product-img">
+                    <img src="/img/shop/Best Pet Supplies (22.5 x 22) Disposable Puppy Pads for Whelping Puppies and Training Dogs.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>Best Pet Supplies (22.5" x 22") Disposable Puppy Pads</h3>
@@ -349,7 +362,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/Adjustable Collar.jpg" class="product-img">
@@ -363,7 +376,7 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
                     <img src="/img/shop/Fuzzyard Beer Bottle Plush Dog Toy.jpg" class="product-img">
@@ -377,10 +390,11 @@
                 <div class="icons">
                     <a href="#" class="fas fa-shopping-cart"></a>
                     <a href="#" class="fas fa-heart"></a>
-                    <a href="#" class="fas fa-eye"></a>    
+                    <a href="#" class="fas fa-eye"></a>
                 </div>
                 <div class="product-img">
-                    <img src="/img/shop/IRIS USA Pee Pads Square Pet Training Pad Holder for Dogs, Dark Gray.jpg" class="product-img">
+                    <img src="/img/shop/IRIS USA Pee Pads Square Pet Training Pad Holder for Dogs, Dark Gray.jpg"
+                        class="product-img">
                 </div>
                 <div class="product-description">
                     <h3>IRIS USA Pee Pads Square</h3>
@@ -396,4 +410,5 @@
 
     <script src="/js/script.js"></script>
 </body>
+
 </html>
