--- a/html/contact.html
+++ b/html/contact.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <title>Contact Us</title>
     <link rel="stylesheet" href="/css/contact.css">
 </head>
+
 <body>
     <header class="navbar">
         <nav class="navbar">
             <div class="logo">
-                <a href="homepage.html"><i class="fas fa-paw"></i> Zhulie</a>    
+                <a href="homepage.html"><i class="fas fa-paw"></i> Zhulie</a>
             </div>
             <div class="menu">
                 <a href="homepage.html">Home</a>
@@ -54,19 +56,21 @@
         </div>
         <div class="contact">
             <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae amet accusantium quibusdam veniam consequatur, perferendis odit reprehenderit dolor assumenda dolores, facilis sed sapiente. Non dolorum veritatis esse voluptatem nostrum!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque repudiandae amet accusantium quibusdam
+                veniam consequatur, perferendis odit reprehenderit dolor assumenda dolores, facilis sed sapiente. Non
+                dolorum veritatis esse voluptatem nostrum!</p>
         </div>
-        <form class="contact-form"action="https://formsubmit.co/5a3552a573e74ca915437a01e826ecff" method="POST">
+        <form class="contact-form" action="https://formsubmit.co/5a3552a573e74ca915437a01e826ecff" method="POST">
             <h3>How Can We Help?</h3>
             <input type="text" name="name" placeholder="Enter your name" required>
             <input type="email" name="email" placeholder="Enter your email" id="">
             <textarea name="" id="" cols="30" rows="5" placeholder="Leave a message here"></textarea>
-            <div class= "ans submit">
+            <div class="ans submit">
                 <button type="submit" id="submit" name="submit">Submit</button>
             </div>
         </form>
     </div>
-    
+
     <section class="footer">
         <p class="footer-text">© COPYRIGHT 2023. ALL RIGHTS RESERVED.</p>
     </section>
@@ -74,4 +78,5 @@
 
     <script src="/js/script.js"></script>
 </body>
+
 </html>
